--- a/index.html
+++ b/index.html
@@ -496,12 +496,12 @@
                         <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="project add-animation animation-1">
                                 <a target="_blank" class="img-class" href="http://www.creative-tim.com/product/gaia-bootstrap-template?ref=presentation-page">
-                                    <img src="assets/img/toner-12a.png">
+                                    <img id="cartucho" src="assets/img/toner-85a.jpg">
                                 </a>
                                 <div class="over-area over-area-sm color-1">
                                     <div class="content">
                                         <br>
-                                        <h3>Toner 12A Negro</h3>
+                                        <h3>Toner 85A Negro</h3>
 
                                     </div>
                                 </div>
@@ -511,12 +511,12 @@
                         <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="project add-animation animation-2">
                                 <a target="_blank" class="img-class" href="http://www.creative-tim.com/product/light-bootstrap-dashboard?ref=presentation-page">
-                                    <img src="assets/img/toner-35a.png">
+                                    <img  src="assets/img/sublimi664.jpg">
                                 </a>
                                 <div class="over-area over-area-sm color-1">
                                     <div class="content">
                                         <br>
-                                        <h3>Toner 35A Negro</h3>
+                                        <h3>Tinta Subliminada 664</h3>
 
                                     </div>
                                 </div>
@@ -526,12 +526,12 @@
                         <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="project add-animation animation-3">
                                 <a target="_blank" class="img-class" href="http://www.creative-tim.com/product/paper-kit?ref=presentation-page">
-                                    <img src="assets/img/toner-36a.png">
+                                    <img id="cartucho" src="assets/img/impre-sys.jpg">
                                 </a>
                                 <div class="over-area over-area-sm color-1">
                                     <div class="content">
                                         <br>
-                                        <h3>Toner 36 A Negro</h3>
+                                        <h3>Instalación del Sistema Continuo</h3>
 
                                     </div>
                                 </div>
